fix(rubriquestyles): fix rubrique style on mobile & tab

--- a/src/app/components/commons/Button/Button.mobile.module.scss
+++ b/src/app/components/commons/Button/Button.mobile.module.scss
@@ -12,7 +12,7 @@ $button-hover-color: $color-white !default;
 
 .button {
   box-sizing: border-box;
-  //white-space: nowrap;
+  white-space: nowrap;
   display: inline-block;
   position: relative;
   margin: 0;
